# grenade

./: .gitignore  default.nix  grenade.cabal
src/: Grenade.hs
src/Grenade/: Core.hs  Layers.hs  Run.hs
src/Grenade/Core/: LearningParameters.hs  Network.hs  Shape.hs
src/Grenade/Layers/: :wq  Concat.hs  Convolution.hs  Crop.hs  Deconvolution.hs  Dropout.hs  Elu.hs  FullyConnected.hs  Logit.hs  Merge.hs  Pad.hs  Pooling.hs  Relu.hs  Reshape.hs  Sinusoid.hs  Softmax.hs  Tanh.hs  Trivial.hs
src/Grenade/Recurrent/Core/: Runner.hs
src/Grenade/Recurrent/Layers/: BasicRecurrent.hs  LSTM.hs
src/Grenade/Train/: DataSet.hs  HyperParamInfo.hs  HyperParams.hs  LearningParameters.hs  Network.hs  OptimiseHyper.hs  Test.hs
src/Grenade/Train/HyperParamInfo/: Internal.hs
src/Grenade/Train/LearningParameters/: Internal.hs
src/Grenade/Train/OptimiseHyper/: Internal.hs
src/Grenade/Utils/: Accuracy.hs  ErrToEither.hs  LogDouble.hs  MetricNormedSpace.hs  PositiveDouble.hs  PositiveInt.hs  ProperFraction.hs  ReadWrite.hs  SumSquaredParams.hs
src/Grenade/Utils/PositiveDouble/: Internal.hs
src/Grenade/Utils/PositiveInt/: Internal.hs
test/: TestUtils.hs  test.hs
test/Test/Grenade/: Gen.hs  InstanceSpec.hs
test/Test/Grenade/QuickCheck/: Gen.hs  Network.hs
test/Test/Grenade/QuickCheck/Layers/: Concat.hs  Convolution.hs  Crop.hs  Deconvolution.hs  Dropout.hs  Elu.hs  FullyConnected.hs  Gen.hs  InstanceSpec.hs  LayerSpec.hs  Logit.hs  Merge.hs  Pad.hs  Pooling.hs  Relu.hs  Reshape.hs  Sinusoid.hs  Softmax.hs  Spec.hs  Tanh.hs  Trivial.hs
test/Test/Grenade/QuickCheck/Layers/FullyConnected/: Gen.hs  InstanceSpec.hs  Spec.hs
test/Test/Grenade/QuickCheck/Train/: HyperParamInfoSpec.hs  HyperParamsSpec.hs  NetworkSpec.hs
test/Test/Grenade/QuickCheck/Train/OptimiseHyper/: Gen.hs  InstanceSpec.hs  Spec.hs
test/Test/Grenade/QuickCheck/Utils/: Gen.hs  InstanceSpec.hs  Spec.hs
